Fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -430,7 +430,7 @@ ul {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 60vh;
+  height: max(60vh, 650px);
   overflow: hidden;
   position: relative;
   min-height: 550px;
